<!--
Copyright (C) 2014 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    style="@style/AppTheme.Pane"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.google.plus.samples.haikuplus.CreateHaikuActivity"
    tools:ignore="MergeRootFrame"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/create_header"
        android:text="@string/create_header"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>
    <!-- Form -->
    <TextView
        android:text="@string/create_field_title"
        style="@style/AppTheme.Text.Label" />
    <EditText
        android:id="@+id/create_field_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/create_field_lineone"
        style="@style/AppTheme.Text.Label" />
    <EditText
        android:id="@+id/create_field_lineone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/create_field_linetwo"
        style="@style/AppTheme.Text.Label" />
    <EditText
        android:id="@+id/create_field_linetwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/create_field_linethree"
        style="@style/AppTheme.Text.Label" />
    <EditText
        android:id="@+id/create_field_linethree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:weightSum="2">
        <Button
            style="@style/AppTheme.Button.Cancel"
            android:id="@+id/button_cancel"
            android:text="@string/button_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            style="@style/AppTheme.Button.Action"
            android:id="@+id/button_add"
            android:text="@string/button_add"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
</ScrollView>