<!--
Copyright (C) 2014 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.google.plus.samples.haikuplus.MainActivity"
    tools:ignore="MergeRootFrame">
    <!-- Signed Out View -->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/signed_out_container"
        android:layout_width="match_parent"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:gravity="center"
            style="@style/AppTheme.Text"
            android:textSize="18sp"
            android:text="@string/sign_in_text"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Signed In create block -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.5"
        android:gravity="center">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/signed_in_container"
            android:gravity="center_horizontal">
            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/user_profile_pic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/user_name"
                style="@style/AppTheme.Text"
                android:layout_toRightOf="@id/user_profile_pic"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />
           <LinearLayout
               android:layout_below="@id/user_profile_pic"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:weightSum="2">
             <Button
                android:id="@+id/button_sign_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:textSize="14sp"
                android:layout_marginRight="2dp"
                style="@style/AppTheme.Button.Auth"
                android:text="@string/button_signout"/>
             <Button
               style="@style/AppTheme.Button.Auth"
               android:id="@+id/button_disconnect"
               android:textSize="14sp"
               android:layout_width="0dp"
               android:layout_marginLeft="2dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/button_disconnect"/>
           </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        style="@style/AppTheme.Pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
 </LinearLayout>